--- a/benchmark/composer/config.yaml
+++ b/benchmark/composer/config.yaml
@@ -6,18 +6,7 @@ test:
     type: local
     number: 1
   rounds:
-  - label: basic-sample-network
-    txNumber:
-    - 25
-    trim: 0
-    rateControl:
-    - type: fixed-rate
-      opts:
-        tps: 5
-    arguments:
-      testAssets: 25
-    callback: benchmark/composer/composer-samples/basic-sample-network.js
-  - label: basic-sample-network
+  - label: healthcare
     txNumber:
     - 50
     trim: 0
@@ -26,9 +15,10 @@ test:
       opts:
         tps: 10
     arguments:
-      testAssets: 50
-    callback: benchmark/composer/composer-samples/basic-sample-network.js
-monitor:
+      testAssets: 1
+      transaction: GivePermission
+    callback: benchmark/composer/composer-samples/healthcare1.js
+  monitor:
   type:
   - docker
   - process
