--- a/network/fabric-v1.2/2org1peercouchdb/composer.json
+++ b/network/fabric-v1.2/2org1peercouchdb/composer.json
@@ -8,8 +8,7 @@
   },
   "composer": {
     "chaincodes": [
-      {"id": "basic-sample-network", "version": "0.1.0", "path": "src/contract/composer", "orgs": ["Org1", "Org2"], "loglevel": "INFO"},
-      {"id": "vehicle-lifecycle-network", "version": "0.1.0", "path": "src/contract/composer", "orgs": ["Org1", "Org2"], "loglevel": "INFO"}
+      {"id": "healthcare", "version": "0.0.28", "path": "src/contract/composer", "orgs": ["Org1", "Org2"], "loglevel": "INFO"}
     ],
     "cryptodir": "network/fabric-v1.2/config/crypto-config",
     "network": {
