added Revoke Permission

--- a/benchmark/composer/config.yaml
+++ b/benchmark/composer/config.yaml
@@ -18,6 +18,18 @@ test:
       testAssets: 10
       transaction: GivePermission
     callback: benchmark/composer/composer-samples/healthcare1.js  
+  - label: healthcare
+    txNumber:
+    - 10
+    trim: 0
+    rateControl:
+    - type: fixed-rate
+      opts:
+        tps: 10
+    arguments:
+      testAssets: 10
+      transaction: RevokePermission
+    callback: benchmark/composer/composer-samples/healthcare1.js  
   monitor:
   type:
   - docker
